zbus: add multi-domain support with IPC forwarding
Add multi-domain support to ZBUS that allows messages to be tagged
with origin domain information and forwarded between different system
domains using IPC service backend.

Key changes:
- New zbus_message structure that wraps message data with domain info
- Domain-aware publishing via zbus_chan_pub_domain() API
- IPC forwarder implementation for inter-core communication
- Sample application demonstrating multi-core message forwarding

Signed-off-by: Trond F. Christiansen <trond.christiansen@nordicsemi.no>

--- a/subsys/zbus/Kconfig
+++ b/subsys/zbus/Kconfig
@@ -107,6 +107,18 @@ config ZBUS_ASSERT_MOCK
 	  enabled, _ZBUS_ASSERT returns -EFAULT instead of assert. It makes it more straightforward to test invalid
 	  parameters.
 
+config ZBUS_MULTIDOMAIN
+    bool "ZBUS multi-domain support"
+    depends on ZBUS
+    help
+      Enable support for multiple domains in ZBUS
+
+if ZBUS_MULTIDOMAIN
+
+rsource "Kconfig.multidomain"
+
+endif # ZBUS_MULTIDOMAIN
+
 
 config HEAP_MEM_POOL_ADD_SIZE_ZBUS
 	int "ZBus requested heap pool size."
