zbus: multidomain: UART forwarder support multiple channels
Refactor the UART forwarder implementation to support forwarding messages
from multiple channels over the same UART interface. This is achieved by
expanding the send message structure to include a channel name, and
introducing a channel lookup mechanism to map channel names to their
corresponding channels. Allowing matching channels before and after
forwarding.

Signed-off-by: Trond F. Christiansen <trond.christiansen@nordicsemi.no>

--- a/subsys/zbus/Kconfig
+++ b/subsys/zbus/Kconfig
@@ -110,6 +110,7 @@ config ZBUS_ASSERT_MOCK
 config ZBUS_MULTIDOMAIN
     bool "ZBUS multi-domain support"
     depends on ZBUS
+	select ZBUS_CHANNEL_NAME
     help
       Enable support for multiple domains in ZBUS
 
