zbus: add multidomain types and proxy agent framework
Add the type definitions and API framework for ZBus multidomain
proxy agents. This provides the foundation for backend-agnostic
communication between domains.

- Define zbus_multidomain_type enum for different backends
- Add zbus_proxy_agent_msg structure for inter-domain messages
- Create zbus_proxy_agent_api for backend abstraction
- Add zbus_proxy_agent_config for agent configuration
- Implement core proxy agent functions (init, send, thread)
- Add macro system for backend-specific configuration generation

The proxy agent framework allows different communication backends
(UART, IPC, etc.) to be plugged in using a common API interface.

Signed-off-by: Trond F. Christiansen <trond.christiansen@nordicsemi.no>

--- a/subsys/zbus/CMakeLists.txt
+++ b/subsys/zbus/CMakeLists.txt
@@ -8,4 +8,8 @@ if(CONFIG_ZBUS_RUNTIME_OBSERVERS)
     zephyr_library_sources(zbus_runtime_observers.c)
 endif()
 
+if(CONFIG_ZBUS_MULTIDOMAIN)
+    zephyr_library_sources(multidomain/zbus_multidomain.c)
+endif()
+
 zephyr_library_sources(zbus_iterable_sections.c)
