zbus: add UART backend for multidomain communication
Implement UART backend for ZBus multidomain communication, enabling
message forwarding between domains over UART connections.

- UART-specific configuration structure with async buffers
- Error handling and UART recovery mechanisms
- Integration with proxy agent framework via API structure
- Configurable buffer count for UART operations

The UART backend uses async UART APIs for non-blocking communication
and implements proper buffer cycling for continuous reception.

Signed-off-by: Trond F. Christiansen <trond.christiansen@nordicsemi.no>

--- a/subsys/zbus/CMakeLists.txt
+++ b/subsys/zbus/CMakeLists.txt
@@ -12,4 +12,8 @@ if(CONFIG_ZBUS_MULTIDOMAIN)
     zephyr_library_sources(multidomain/zbus_multidomain.c)
 endif()
 
+if(CONFIG_ZBUS_MULTIDOMAIN_UART)
+    zephyr_library_sources(multidomain/zbus_multidomain_uart.c)
+endif()
+
 zephyr_library_sources(zbus_iterable_sections.c)
