--- a/subsys/zbus/multidomain/Kconfig
+++ b/subsys/zbus/multidomain/Kconfig
@@ -13,7 +13,7 @@ source "subsys/logging/Kconfig.template.log_config"
 config ZBUS_MULTIDOMAIN_MESSAGE_SIZE
     int "ZBus multidomain message size"
     default 256
-    range 128 1024
+    range 8 1024
     help
       Configures the size of messages used in ZBus multidomain communication.
       This setting affects the maximum size of messages that can be sent between domains.
@@ -21,13 +21,14 @@ config ZBUS_MULTIDOMAIN_MESSAGE_SIZE
 config ZBUS_MULTIDOMAIN_CHANNEL_NAME_SIZE
     int "ZBus multidomain channel name size"
     default 32
-    range 16 64
+    range 8 64
     help
       Configures the maximum size of channel names used in ZBus multidomain communication.
       This setting affects how long channel names can be when communicating between domains.
 
 config ZBUS_MULTIDOMAIN_UART
     bool "ZBus multidomain UART backend"
+    depends on UART_ASYNC_API
     default n
     help
       Enables the ZBus multidomain UART backend, allowing communication between domains over UART.
@@ -43,5 +44,14 @@ config ZBUS_MULTIDOMAIN_UART_BUF_COUNT
       Configures the number of buffers used for the ZBus multidomain UART backend.
 
 endif # ZBUS_MULTIDOMAIN_UART
+
+config ZBUS_MULTIDOMAIN_IPC
+    bool "ZBus multidomain IPC backend"
+    depends on MBOX
+    depends on IPC_SERVICE
+    default n
+    help
+      Enables the ZBus multidomain IPC backend, allowing communication between domains over IPC.
+      This feature is useful for systems that require inter-domain communication via IPC.
 
 endmenu # ZBUS_MULTIDOMAIN Configuration
