--- a/subsys/zbus/multidomain/Kconfig
+++ b/subsys/zbus/multidomain/Kconfig
@@ -26,6 +26,57 @@ config ZBUS_MULTIDOMAIN_CHANNEL_NAME_SIZE
       Configures the maximum size of channel names used in ZBus multidomain communication.
       This setting affects how long channel names can be when communicating between domains.
 
+config ZBUS_MULTIDOMAIN_PROXY_STACK_SIZE
+	int "ZBus multidomain proxy stack size"
+	default 1024
+	range 512 8192
+	help
+		Configures the stack size (in bytes) for the ZBus multidomain proxy agent thread.
+		This setting affects the memory allocation for the proxy agent's operations.
+
+config ZBUS_MULTIDOMAIN_PROXY_PRIORITY
+	int "ZBus multidomain proxy thread priority"
+	default 7
+	range 0 15
+	help
+		Configures the priority of the ZBus multidomain proxy agent thread.
+		This setting affects the scheduling of the proxy agent in relation to other threads.
+
+config ZBUS_MULTIDOMAIN_SENT_MSG_POOL_SIZE
+	int "ZBus multidomain sent message history size"
+	default 4
+	range 1 64
+	help
+		Configures the number of sent messages to keep simultaneously in the history pool for 
+		tracking acknowledgments and retransmissions in the ZBus multidomain. If more messages
+		than this number are sent without acknowledgment, the new messages will be dropped.
+
+config ZBUS_MULTIDOMAIN_SENT_MSG_ACK_TIMEOUT
+	int "ZBus multidomain sent message initial acknowledgment timeout (ms)"
+	default 10
+	range 1 1000
+	help
+		Configures the initial timeout duration (in milliseconds) to wait for an acknowledgment
+		of a sent message in the ZBus multidomain proxy agent. If an acknowledgment is
+		not received within this time, the message may be retransmitted with a exponential backoff.
+
+config ZBUS_MULTIDOMAIN_SENT_MSG_ACK_TIMEOUT_MAX
+	int "ZBus multidomain sent message acknowledgment timeout maximum (ms)"
+	default 1000
+	range 100 10000
+	help
+		Configures the maximum timeout duration (in milliseconds) for waiting for an acknowledgment
+		of a sent message in the ZBus multidomain proxy agent. This setting limits the exponential 
+		backoff for retransmissions to prevent excessively long wait times.
+
+config ZBUS_MULTIDOMAIN_MAX_TRANSMIT_ATTEMPTS
+	int "ZBus multidomain maximum transmit attempts"
+	default 10
+	help
+		Configures the maximum number of attempts to transmit a message in the ZBus multidomain 
+		proxy agent. If an acknowledgment is not received after this many attempts, the message 
+		will be dropped. Setting this to 1 means no retransmissions will be attempted.
+
 config ZBUS_MULTIDOMAIN_UART
     bool "ZBus multidomain UART backend"
     depends on UART_ASYNC_API
